--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
     <title>Log In - Yelp</title>
 </head>
@@ -15,10 +17,16 @@
     <hr><br>
     <br><br><br><br><br><br>
     <div id="mainform">
-        <h2>Log in to Yelp</h2>
-        <h4>New to Yelp?<a href="">Sign up</a></h4>
-        <p>By continuing, you agree to Yelp’s <a href="">Terms of Service</a> and acknowledge Yelp’s <a href="">Privacy Policy.</a></p>
+        <h4><strong>Log In to Yelp</strong></h4>
+        <h6>New to Yelp?<a href="">Sign up</a></h6>
+        <p>By continuing, you agree to Yelp’s <a href="">Terms of Service </a>and acknowledge Yelp’s <a href="">Privacy Policy.</a></p>
+        <button type="button" class="btn btn-light"><img src="images/googlelogo.png" alt="">Continue With Google</button>
+        <br><button type="button" class="btn btn-dark" id="apple"><img src="images/applelogo.png" alt=""> Continue With Google</button>
+        <hr class="horizontal-line">
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
