--- a/index.html
+++ b/index.html
@@ -218,54 +218,55 @@
     </div>
     <footer class="index-footer">
         <div class="footer-container">
-
-            <section class="footer-section about">
+            <div class="footer-section about">
                 <h2 class="section-heading">About</h2>
                 <ul>
-                    <li><a href="#">About Yelp</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Press & Investor Relations</a></li>
-                    <li><a href="#">Trust & Safety</a></li>
-                    <li><a href="#">Content Guidelines</a></li>
-                    <li><a href="#">Accessibility Statement</a></li>
-                    <li><a href="#">Legal Stuff</a></li>
+                    <li><a href="">About Yelp</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Press & Investor Relations</a></li>
+                    <li><a href="">Trust & Safety</a></li>
+                    <li><a href="">Content Guidelines</a></li>
+                    <li><a href="">Accessibility Statement</a></li>
+                    <li><a href="">Legal Stuff</a></li>
                 </ul>
-            </section>
-
-            <section class="footer-section discover">
+            </div>
+            <div class="footer-section discover">
                 <h2 class="section-heading">Discover</h2>
                 <ul>
-                    <li><a href="#">Project Cost Guides</a></li>
-                    <li><a href="#">Collections</a></li>
-                    <li><a href="#">Talk</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Yelp Blog</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Yelp Mobile</a></li>
-                    <li><a href="#">Developers</a></li>
-                    <li><a href="#">RSS</a></li>
+                    <li><a href="">Project Cost Guides</a></li>
+                    <li><a href="">Collections</a></li>
+                    <li><a href="">Talk</a></li>
+                    <li><a href="">Events</a></li>
+                    <li><a href="">Yelp Blog</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">Yelp Mobile</a></li>
+                    <li><a href="">Developers</a></li>
+                    <li><a href="">RSS</a></li>
                 </ul>
-            </section>
+            </div>
 
-            <section class="footer-section yelp-for-business">
+            <div class="footer-section yelp-for-business">
                 <h2 class="section-heading">Yelp for Business</h2>
                 <ul>
-                    <li><a href="#">Yelp for Business</a></li>
-                    <li><a href="#">Business Owner Login</a></li>
-                    <li><a href="#">Claim your Business Page</a></li>
-                    <li><a href="#">Advertise on Yelp</a></li>
-                    <li><a href="#">Yelp for Restaurant Owners</a></li>
-                    <li><a href="#">Table Management</a></li>
-                    <li><a href="#">Success Stories</a></li>
-                    <li><a href="#">Business Support</a></li>
-                    <li><a href="#">Yelp Blog for Business</a></li>
+                    <li><a href="">Yelp for Business</a></li>
+                    <li><a href="">Business Owner Login</a></li>
+                    <li><a href="">Claim your Business Page</a></li>
+                    <li><a href="">Advertise on Yelp</a></li>
+                    <li><a href="">Yelp for Restaurant Owners</a></li>
+                    <li><a href="">Table Management</a></li>
+                    <li><a href="">Success Stories</a></li>
+                    <li><a href="">Business Support</a></li>
+                    <li><a href="">Yelp Blog for Business</a></li>
                 </ul>
-            </section>
-
+            </div>
         </div>
+        <p class="protected">Copyright © 2004–2024 Yelp Inc. Yelp, Yelp logo, Yelp burst and related marks are registered trademarks of
+            Yelp.</p>
+        <a href="" class="protected"><p > This site is protected by hCaptcha - See additional Privacy Policy and Terms</p></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
