--- a/login.html
+++ b/login.html
@@ -13,17 +13,21 @@
 
 <body>
     <a href="index.html"><img src="images/Yelp_Logo_color.png" alt="" id="logo"></a>
-    <br><br><br><br>
-    <hr><br>
-    <br><br><br><br><br><br>
+    <br><br><br><br><hr><br><br><br><br><br><br><br>
     <div id="mainform">
-        <h4><strong>Log In to Yelp</strong></h4>
+        <h4>Log In to Yelp</h4>
         <h6>New to Yelp?<a href="">Sign up</a></h6>
         <p>By continuing, you agree to Yelp’s <a href="">Terms of Service </a>and acknowledge Yelp’s <a href="">Privacy Policy.</a></p>
-        <button type="button" class="btn btn-light"><img src="images/googlelogo.png" alt="">Continue With Google</button>
+        <button type="button" class="btn btn-light" id="google"><img src="images/googlelogo.png" alt="">Continue With Google</button>
         <br><button type="button" class="btn btn-dark" id="apple"><img src="images/applelogo.png" alt=""> Continue With Google</button>
-        <hr class="horizontal-line">
+        <hr class="horizontal-line"><div ><p id="or">OR</p></div>
+        <input type="text" class="form-control" placeholder="Email"><br>
+        <input type="password" class="form-control" placeholder="password" id="passfield">
+        <div class="ending"><a href=""><p>Forgot password?</p></a></div>
+        <button type="button" class="btn btn-dark" id="loginbtn">Login</button>
+        <div class="ending"><p>New to Yelp? <a href="">Sign up</a></p></div>
     </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
