Home, Review, Login Complete

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </a>
     </div>
     <div>
-        <a href="" target="_blank">
+        <a href="signup.html" target="_blank">
             <button type="button" id="signupbtn"><span>Sign Up</span></button>
         </a>
     </div>
@@ -91,7 +91,7 @@
     <div class="dropdown" id="dd3">
         <a class="btn btn-trasparent dropdown-toggle" id="ddb" href="#" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Restaurants
+            Home Services
         </a>
         <ul class="dropdown-menu" id="ddm">
             <li><a class="dropdown-item" href="#" id="li1"><img src="images/pizza_7430536.png" alt=""
@@ -108,7 +108,7 @@
     <div class="dropdown" id="dd4">
         <a class="btn btn-trasparent dropdown-toggle" id="ddb" href="#" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Restaurants
+            Auto Services
         </a>
         <ul class="dropdown-menu" id="ddm">
             <li><a class="dropdown-item" href="#" id="li1"><img src="images/pizza_7430536.png" alt=""
@@ -146,9 +146,9 @@
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/restaurant bg.jpg" class="card-img-top" alt="..." height="200px" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
+                <h5 class="card-title">Yelp Elite Event: Cocina...</h5>
                 <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
                     really enjoyed ourselves. They have other foods ...</p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
@@ -156,9 +156,9 @@
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/sanwich.jpg" class="card-img-top" alt="..." height="200px" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
+                <h5 class="card-title">Yelp Elite Event: Cocina...</h5>
                 <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
                     really enjoyed ourselves. They have other foods ...</p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
@@ -166,56 +166,86 @@
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/broast.jpg" class="card-img-top" alt="..." height="100%" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
-                <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
-                    really enjoyed ourselves. They have other foods ...</p>
+                <h5 class="card-title">Broast</h5>
+                <p class="card-text">crispy-fried-chicken-plate-with-salad-carrot... <br><br><br></p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
                     class="btn btn-primary">Continue Reading</a>
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/pizza.jpg" class="card-img-top" alt="..." height="200px" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
-                <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
-                    really enjoyed ourselves. They have other foods ...</p>
+                <h5 class="card-title">Pizza</h5>
+                <p class="card-text">pizza-pizza-filled-with-tomatoes-salami-olives <br><br><br></p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
                     class="btn btn-primary">Continue Reading</a>
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/boti.jpg" class="card-img-top" alt="..." height="200px" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
-                <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
-                    really enjoyed ourselves. They have other foods ...</p>
+                <h5 class="card-title">Malai Boti</h5>
+                <p class="card-text">Chicken skewers with slices of sweet peppers and dill... <br><br><br></p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
                     class="btn btn-primary">Continue Reading</a>
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/kabab.jpg" class="card-img-top" alt="..." height="200px" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
-                <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
-                    really enjoyed ourselves. They have other foods ...</p>
+                <h5 class="card-title">Meat Cutlets</h5>
+                <p class="card-text">juicy delicious meat cutlets on a dark table. russian cuisine.... <br><br><br></p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
                     class="btn btn-primary">Continue Reading</a>
             </div>
         </div>
         <div class="card" style="width: 300px;">
-            <img src="images/bfries.jpg" class="card-img-top" alt="..." height="200px" width="100%">
+            <img src="images/pilaf.jpg" class="card-img-top" alt="..." height="200px" width="100%">
             <div class="card-body">
-                <h5 class="card-title">Matty’s Old Fashioned</h5>
-                <p class="card-text">This restaurant in Oakland has some of the best burgers, homemade style and we
-                    really enjoyed ourselves. They have other foods ...</p>
+                <h5 class="card-title">Pilaf</h5>
+                <p class="card-text">Pilaf with beans and fried onions... <br><br><br><br></p>
                 <a href="https://www.yelp.com/biz/mattys-old-fashioned-oakland?hrid=UaeCjTNUI4v2upAMSwQlYQ"
                     class="btn btn-primary">Continue Reading</a>
             </div>
         </div>
     </div>
+    <div id="minicard">
+        <div class="minicard-in">
+            <img src="images/Fork.png" alt=""><br>
+            <p>Restaurants</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/Shopping.png" alt=""><br>
+            <p>Shopping</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/Nightlife.png" alt=""><br>
+            <p>Nightlife</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/Activelife.png" alt=""><br>
+            <p>Active Life</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/Beauty.png" alt=""><br>
+            <p>Beauty & Spas</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/Automotive.png" alt=""><br>
+            <p>Automotive</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/Homeservice.png" alt=""><br>
+            <p>Home Services</p>
+        </div>
+        <div class="minicard-in">
+            <img src="images/More.png" alt=""><br>
+            <p>More</p>
+        </div>
+    </div>
+
     <footer class="index-footer">
         <div class="footer-container">
             <div class="footer-section about">
@@ -260,9 +290,14 @@
                 </ul>
             </div>
         </div>
-        <p class="protected">Copyright © 2004–2024 Yelp Inc. Yelp, Yelp logo, Yelp burst and related marks are registered trademarks of
-            Yelp.</p>
-        <a href="" class="protected"><p > This site is protected by hCaptcha - See additional Privacy Policy and Terms</p></a>
+        <div id="copyright">
+            <p class="protected">Copyright © 2004–2024 Yelp Inc. Yelp, Yelp logo, Yelp burst and related marks are
+                registered trademarks of
+                Yelp.</p>
+            <a href="" class="protected">
+                <p> This site is protected by hCaptcha - See additional Privacy Policy and Terms</p>
+            </a>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
