--- a/review.html
+++ b/review.html
@@ -14,7 +14,7 @@
 
 <body>
     <a href="index.html"><img src="images/Yelp_Logo_color.png" alt="" id="logo"></a>
-    <a href="" target="_blank"><button type="button" id="loginbtn"><span>Log In</span></button></a>
+    <a href="login.html"><button type="button" id="loginbtn"><span>Log In</span></button></a>
     <a href="" target="_blank"><button type="button" id="signupbtn"><span>Sign Up</span></button></a>
     <br><br><br><br>
     <hr><br>
