--- a/signup.html
+++ b/signup.html
@@ -7,20 +7,24 @@
     <link rel="icon" href="images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="login.css">
-    <title>Log In - Yelp</title>
+    <link rel="stylesheet" href="signup.css">
+    <title>Sign Up - Yelp</title>
 </head>
 
 <body>
     <a href="index.html"><img src="images/Yelp_Logo_color.png" alt="" id="logo"></a>
     <br><br><br><br><hr><br><br><br><br><br><br><br>
     <div id="mainform">
-        <h4>Log In to Yelp</h4>
-        <h6>New to Yelp?<a href="">Sign up</a></h6>
+        <h4>Sign Up for Yelp</h4>
+        <h6>Connect with great local businesses</a></h6>
         <p>By continuing, you agree to Yelp’s <a href="">Terms of Service </a>and acknowledge Yelp’s <a href="">Privacy Policy.</a></p>
         <button type="button" class="btn btn-light" id="google"><img src="images/googlelogo.png" alt="">Continue With Google</button>
         <br><button type="button" class="btn btn-dark" id="apple"><img src="images/applelogo.png" alt=""> Continue With Google</button>
+        <p id="dworry">Don't worry, we never post without your permission.</p>
         <hr class="horizontal-line"><div ><p id="or">OR</p></div>
+        <div><input type="text" class="form-control" placeholder="First name">
+            <input type="text" class="form-control" placeholder="Last name">
+        </div>    
         <input type="text" class="form-control" placeholder="Email"><br>
         <input type="password" class="form-control" placeholder="password" id="passfield">
         <div class="ending"><a href=""><p>Forgot password?</p></a></div>
@@ -80,6 +84,7 @@
                 <p> This site is protected by hCaptcha - See additional Privacy Policy and Terms</p>
             </a>
         </div>
+        
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
