--- a/allpages/signup.html
+++ b/allpages/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="../images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="signup.css">
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <img src="images/loginhero.png" alt="" id="loginh">
-    <a href="index.html"><img src="images/Yelp_Logo_color.png" alt="" id="logo"></a>
+    <img src="../images/loginhero.png" alt="" id="loginh">
+    <a href="index.html"><img src="../images/Yelp_Logo_color.png" alt="" id="logo"></a>
     <br><br><br><br>
     <hr><br><br><br><br><br><br><br>
     <div id="mainform">
@@ -21,9 +21,9 @@
         <h6>Connect with great local businesses</a></h6>
         <p>By continuing, you agree to Yelp’s <a href="">Terms of Service </a>and acknowledge Yelp’s <a href="">Privacy
                 Policy.</a></p>
-        <button type="button" class="btn btn-light" id="google"><img src="images/googlelogo.png" alt="">Continue With
+        <button type="button" class="btn btn-light" id="google"><img src="../images/googlelogo.png" alt="">Continue With
             Google</button>
-        <br><button type="button" class="btn btn-dark" id="apple"><img src="images/applelogo.png" alt=""> Continue With
+        <br><button type="button" class="btn btn-dark" id="apple"><img src="../images/applelogo.png" alt=""> Continue With
             Google</button>
         <p id="dworry">Don't worry, we never post without your permission.</p>
         <hr class="horizontal-line">
@@ -123,12 +123,9 @@
                 <option value="2023">2023</option>
             </select>
         </div>
-        <div class="ending"><a href="">
-                <p>Forgot password?</p>
-            </a></div>
         <button type="button" class="btn btn-dark" id="loginbtn">Login</button>
         <div class="ending">
-            <p>New to Yelp? <a href="">Sign up</a></p>
+            <p>Already on Yelp? <a href="login.html">Log In</a></p>
         </div>
     </div>
     <br><br><br>
@@ -137,7 +134,7 @@
             <div class="footer-section about">
                 <h2 class="section-heading">About</h2>
                 <ul>
-                    <li><a href="">About Yelp</a></li>
+                    <li><a href="about.html"><b>About Yelp</b></a></li>
                     <li><a href="">Careers</a></li>
                     <li><a href="">Press & Investor Relations</a></li>
                     <li><a href="">Trust & Safety</a></li>
