--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         </ul>
     </div>
     <div>
-        <a href="review.html">
+        <a href="allpages/review.html">
             <button type="button" id="reviewbtn">Write a Review</button>
         </a>
     </div>
     <div>
-        <a href="login.html">
+        <a href="allpages/login.html">
             <button type="button" id="loginbtn"><span>Log In</span></button>
         </a>
     </div>
     <div>
-        <a href="signup.html" target="_blank">
+        <a href="allpages/signup.html">
             <button type="button" id="signupbtn"><span>Sign Up</span></button>
         </a>
     </div>
@@ -211,6 +211,9 @@
             </div>
         </div>
     </div>
+    <div id="category">
+        <h2>Categories</h2>
+    </div>
     <div id="minicard">
         <div class="minicard-in">
             <img src="images/Fork.png" alt=""><br>
@@ -251,7 +254,7 @@
             <div class="footer-section about">
                 <h2 class="section-heading">About</h2>
                 <ul>
-                    <li><a href="">About Yelp</a></li>
+                    <li><a href="allpages/about.html"><b>About Yelp</b></a></li>
                     <li><a href="">Careers</a></li>
                     <li><a href="">Press & Investor Relations</a></li>
                     <li><a href="">Trust & Safety</a></li>
