--- a/allpages/login.html
+++ b/allpages/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="../images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
@@ -12,28 +12,29 @@
 </head>
 
 <body>
-    <a href="index.html"><img src="images/Yelp_Logo_color.png" alt="" id="logo"></a>
+    <a href="index.html"><img src="../images/Yelp_Logo_color.png" alt="" id="logo"></a>
     <br><br><br><br><hr><br><br><br><br><br><br><br>
+    <form action="" ></form>
     <div id="mainform">
         <h4>Log In to Yelp</h4>
-        <h6>New to Yelp?<a href="">Sign up</a></h6>
+        <h6>New to Yelp?<a href="signup.html">Sign up</a></h6>
         <p>By continuing, you agree to Yelp’s <a href="">Terms of Service </a>and acknowledge Yelp’s <a href="">Privacy Policy.</a></p>
-        <button type="button" class="btn btn-light" id="google"><img src="images/googlelogo.png" alt="">Continue With Google</button>
-        <br><button type="button" class="btn btn-dark" id="apple"><img src="images/applelogo.png" alt=""> Continue With Google</button>
+        <button type="button" class="btn btn-light" id="google"><img src="../images/googlelogo.png" alt="">Continue With Google</button>
+        <br><button type="button" class="btn btn-dark" id="apple"><img src="../images/applelogo.png" alt=""> Continue With Google</button>
         <hr class="horizontal-line"><div ><p id="or">OR</p></div>
         <input type="text" class="form-control" placeholder="Email"><br>
         <input type="password" class="form-control" placeholder="password" id="passfield">
         <div class="ending"><a href=""><p>Forgot password?</p></a></div>
         <button type="button" class="btn btn-dark" id="loginbtn">Login</button>
-        <div class="ending"><p>New to Yelp? <a href="">Sign up</a></p></div>
+        <div class="ending"><p>New to Yelp? <a href="signup.html">Sign up</a></p></div>
     </div>
-    <img src="images/loginhero.png" alt="" id="loginh">
+    <img src="../images/loginhero.png" alt="" id="loginh">
     <footer class="index-footer">
         <div class="footer-container">
             <div class="footer-section about">
                 <h2 class="section-heading">About</h2>
                 <ul>
-                    <li><a href="">About Yelp</a></li>
+                    <li><a href="about.html"><b>About Yelp</b></a></li>
                     <li><a href="">Careers</a></li>
                     <li><a href="">Press & Investor Relations</a></li>
                     <li><a href="">Trust & Safety</a></li>
