--- a/allpages/review.html
+++ b/allpages/review.html
@@ -27,7 +27,7 @@
     <p id="rt">Review anything from your favorite patio spot to your local flower shop.</p>
     <div id="search">
         <input type="text" placeholder="things to do!">
-        <a href=""><img src="images/search-icon.png" alt=""></a>
+        <a href=""><img src="../images/search-icon.png" alt=""></a>
     </div>
     <img src="../images/reviewhero.svg" alt="" id="hero">
     <br><br><br><br><br><br>
