--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="images/headcontainer.png" alt="">
     </div>
     <a href="index.html"><img src="images/Yelp_Logo.png" alt="" id="logo"></a>
-    
+
     <div id="search">
         <input type="text" placeholder="things to do!">
         <a href=""><img src="images/search-icon.png" alt=""></a>
@@ -46,19 +46,21 @@
             <button type="button" id="reviewbtn">Write a Review</button>
         </a>
     </div>
-    <div>
-        <a href="allpages/login.html">
-            <button type="button" id="loginbtn"><span>Log In</span></button>
-        </a>
-    </div>
-    <div>
-        <a href="allpages/signup.html">
-            <button type="button" id="signupbtn"><span>Sign Up</span></button>
-        </a>
+    <div id="btns">
+        <div>
+            <a href="allpages/login.html">
+                <button type="button" id="loginbtn"><span>Log In</span></button>
+            </a>
+        </div>
+        <div>
+            <a href="allpages/signup.html">
+                <button type="button" id="signupbtn"><span>Sign Up</span></button>
+            </a>
+        </div>
     </div>
     <div id="allhero">
         <div id="herodiv">
-            <div></div>
+            <div id="coverb"></div>
             <img src="images/soup.jpg" alt="spaghetti-image" id="heroimg">
         </div>
         <div id="heroopt1">
