--- a/allpages/about.html
+++ b/allpages/about.html
@@ -7,17 +7,15 @@
 
     <title>Restaurants, Dentists, Bars, Beauty Salons, Doctors - Yelp</title>
     <link rel="icon" href="../images/favicon.png">
-    <link rel="stylesheet" href="about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    
+    <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
 
-    <div id="headcontain">
-        <img src="../images/headcontainer.png" alt="">
-    </div>
+    <div id="headcontain"> </div>
 
     <a href="../index.html"><img src="../images/Yelp_Logo_color.png" alt="" id="logo"></a>
 
@@ -29,6 +27,24 @@
     <div id="search">
         <input type="text" placeholder="things to do!">
         <a href=""><img src="../images/search-icon.png" alt=""></a>
+    </div>
+
+    <div>
+        <a href="review.html">
+            <button type="button" id="reviewbtn">Write a Review</button>
+        </a>
+    </div>
+
+    <div>
+        <a href="login.html">
+            <button type="button" id="loginbtn"><span>Log In</span></button>
+        </a>
+    </div>
+
+    <div>
+        <a href="signup.html">
+            <button type="button" id="signupbtn"><span>Sign Up</span></button>
+        </a>
     </div>
 
     <div class="dropdown" id="dd">
@@ -48,24 +64,6 @@
             <li><a class="dropdown-item" href="#" id="li1"><img src="../images/yelpminiicon.png" alt=""
                         width="30px"><span>Explore yelp for Business</span></a></li>
         </ul>
-    </div>
-
-    <div>
-        <a href="review.html">
-            <button type="button" id="reviewbtn">Write a Review</button>
-        </a>
-    </div>
-
-    <div>
-        <a href="login.html">
-            <button type="button" id="loginbtn"><span>Log In</span></button>
-        </a>
-    </div>
-
-    <div>
-        <a href="signup.html">
-            <button type="button" id="signupbtn"><span>Sign Up</span></button>
-        </a>
     </div>
 
     <div class="dropdown" id="dd2">
